2003-07-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.c, timidity/tables.[ch],
	  timidity/timidity.c:
	  Support for single-note tuning change
	  Support for channel mute by user-defined temperament type
	  Fix around temperament type redrawing on ME_RESET
	  Fix around channel mute by temperament type on ME_RESET

2003-07-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.[ch], timidity/timidity.c:
	  Support for user-defined temperaments (to be continued)

2003-07-03  Takashi Iwai <tiwai@suse.de>

	* configure.in: Support for tcltk 8.3/8.4
	* timidity/readmidi.c (read_midi_file): Support for RMI
	* timidity/sysdep.h: Fix in C99 bit width warranted integer types

2003-06-30  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mod2midi.c (Voice_SetVolume): converted linear volume
	  events to non-linear events, so that mods will sound correct
	  again

2003-06-30  skeishi <s_keishi@mutt.freemail.ne.jp>

	* interface/rtsyn.h, interface/rtsyn_common.c,
	  interface/rtsyn_wimm.c interface/rtsyn_portmidi.c:
	  Fix Realteime Synthesizer Engine.

2003-06-29  skeishi <s_keishi@mutt.freemail.ne.jp>

	* interface/portmidisyn_c.c, interface/rtsyn.h,
	  interface/rtsyn_common.c, interface/rtsyn_wimm.c,
	  interface/rtsyn_portmidi.c: Added.
	* configure.in, interface.h.in,
	  interface/w32g_syn.c, interface/winsyn_c.c,
	  timidity/controls.c, timidity/timdity.c:
	  Add PortMIDI synthesizer mode.

2003-06-28  Saito <timidity@flashmail.com>

	* timidity/sndfont.c:
	  Fix volume bug of drum instruments.

2003-06-26  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (reduce_voice_CPU): Bug fix (this is
	  obsolate yet)
	* timidity/playmidi.c (note_off): rx_note_off == 0 should only
	  ignore drum Note Off if the sample is not looped, otherwise the
	  note will get stuck

2003-06-24  mput <root@mput.dip.jp>

	* bootstrap.sh, autoconf/Makefile.boot: Deleted.
	* Makefile.am (M4DIR, ACLOCAL_AMFLAGS): Add.